Стилизует подвал для десктопа

--- a/source/index.html
+++ b/source/index.html
@@ -138,23 +138,25 @@
 
   <footer>
     <div class="footer container">
-      <a class="footer__logo-link">
-        <img class="footer__logo" src="/img/svg/logo.svg" alt="Логотип компании Smart Device">
-      </a>
-      <div class="footer__social social">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Мы в Одноклассниках</span>
-          <img src="/img/sprite/icon-ok.svg" alt="Иконка Одноклассников">
+      <div class="footer__logo-wrapper">
+        <a class="footer__logo-link">
+          <img class="footer__logo" src="/img/svg/logo.svg" alt="Логотип компании Smart Device" width="215" height="55">
         </a>
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Мы во Вконтакте</span>
-          <img src="/img/sprite/icon-vk.svg" alt="Иконка Вконтакте">
-        </a>
-        <a class="social__link" href="#">
-          <span class="visually-hidden">Мы в Pinterest</span>
-          <img src="/img/sprite/icon-pinterest.svg" alt="Иконка Pinterest">
-        </a>
+        <div class="footer__social social">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Мы в Одноклассниках</span>
+            <img src="/img/sprite/icon-ok.svg" alt="Иконка Одноклассников" width="30" height="30">
+          </a>
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Мы во Вконтакте</span>
+            <img src="/img/sprite/icon-vk.svg" alt="Иконка Вконтакте" width="30" height="30">
+          </a>
+          <a class="social__link" href="#">
+            <span class="visually-hidden">Мы в Pinterest</span>
+            <img src="/img/sprite/icon-pinterest.svg" alt="Иконка Pinterest" width="30" height="30">
+          </a>
+        </div>
       </div>
       <nav class="footer__nav nav">
         <h2 class="nav__title">Разделы сайта</h2>
