--- a/source/index.html
+++ b/source/index.html
@@ -103,7 +103,6 @@
 
     <section class="advantages container">
       <h2 class="visually-hidden">Наши преимущества</h2>
-      <!--      <div class="advantages__wrapper">-->
       <ul class="advantages__list">
         <li class="advantages__item">
           <svg width="35" height="35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -137,11 +136,10 @@
             Вас устраивает.</p>
         </li>
       </ul>
-      <!--      </div>-->
     </section>
 
     <section class="about container">
-      <img src="/img/2022.png" alt="Надпись 2022">
+      <img src="/img/2022.png" alt="Надпись 2022" width="150" height="320">
       <div class="about__wrapper">
         <h2 class="about__title">О&nbsp;компании</h2>
         <p>Мы&nbsp;поставляем электронные комплектующие, производим печатные платы и&nbsp;предоставляем мировые
@@ -156,7 +154,7 @@
           по&nbsp;всей стране и&nbsp;20&nbsp;городов присутствия.
           Мы&nbsp;стремимся к&nbsp;постоянному развитию и&nbsp;повышению уровня качества продукции, производимой внутри
           компании. Использование инновационных технологий помогает экономить деньги и&nbsp;время наших клиентов</p>
-        <button class="btn about__btn">Подробнее</button>
+        <button class="btn about__btn" data-open-text="Свернуть">Подробнее</button>
       </div>
     </section>
     <section class="catalog container">
