--- a/source/index.html
+++ b/source/index.html
@@ -62,6 +62,11 @@
     <path d="M15.3717 25.0115L11.8607 21.4999C11.5937 21.2332 11.161 21.233 10.8939 21.4999C10.6269 21.7669 10.6269 22.1998 10.8939 22.4669L14.4049 25.9785C14.5385 26.112 14.7134 26.1788 14.8883 26.1788C15.0632 26.1788 15.2382 26.112 15.3717 25.9785C15.6386 25.7115 15.6386 25.2786 15.3717 25.0115Z" fill="currentcolor"/>
     <path d="M9.98793 19.627C9.86085 19.4999 9.6851 19.4266 9.5047 19.4266C9.32491 19.4266 9.14923 19.4998 9.0214 19.627C8.89425 19.7541 8.82111 19.9305 8.82111 20.111C8.82111 20.2908 8.89418 20.4672 9.0214 20.5944C9.14855 20.7216 9.32491 20.7947 9.5047 20.7947C9.68517 20.7947 9.86085 20.7216 9.98793 20.5944C10.1158 20.4665 10.1889 20.2908 10.1889 20.111C10.1889 19.9305 10.1158 19.7548 9.98793 19.627Z" fill="currentcolor"/>
   </symbol>
+  <!--  стрелка карточки-->
+  <symbol viewBox="0 0 5 10" id="card-arrow">
+    <path d="M0.476196 8.80957L4.28572 5.00005L0.476196 1.19052" stroke="white" stroke-linejoin="round"/>
+  </symbol>
+
 </svg>
 
 <div class="wrapper">
@@ -95,7 +100,10 @@
   <main>
     <h1 class="visually-hidden">Сайт компании Smart Device</h1>
     <section class="top-section container">
-      <img class="top-section__bg" src="/img/title-bg.jpg" alt="Изображение материнской платы" width="1920" height="880">
+      <picture>
+        <source srcset="/img/title-bg.webp 1x, /img/title-bg@2x.webp 2x" type="image/webp">
+        <img class="top-section__bg" src="/img/title-bg.jpg" srcset="/img/title-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1920" height="880">
+      </picture>
       <h2 class="top-section__title">Печатные платы</h2>
       <p class="top-section__text">производство и&nbsp;монтаж, поставка комплектующих, <br>блоков и&nbsp;модулей</p>
       <a class="btn top-section__btn" href="#feedback" data-mobile-text="бесплатная консультация">Получить бесплатную консультацию</a>
@@ -139,7 +147,10 @@
     </section>
 
     <section class="about container">
-      <img src="/img/2022.png" alt="Надпись 2022" width="150" height="320">
+      <picture>
+        <source srcset="/img/2022.webp 1x, /img/2022@2x.webp 2x" type="image/webp">
+        <img src="/img/2022.png" srcset="/img/2022@2x.png 2x" alt="Надпись 2022" width="150" height="320">
+      </picture>
       <div class="about__wrapper">
         <h2 class="about__title">О&nbsp;компании</h2>
         <p>Мы&nbsp;поставляем электронные комплектующие, производим печатные платы и&nbsp;предоставляем мировые
@@ -158,16 +169,43 @@
       </div>
     </section>
     <section class="catalog container">
-      <h2 class="catalog__title">Smart Device предлагает следующие товары и&nbsp;услуги</h2>
+      <h2 class="catalog__title" data-mobile-text="Товары и услуги Smart Device">Smart Device предлагает следующие товары и&nbsp;услуги</h2>
       <ul class="catalog__list">
         <li class="catalog__item">
-          <a href="#">Производство печатных плат</a>
+          <a href="#">
+            <picture>
+              <source srcset="/img/card-bg.webp 1x, /img/card-bg@2x.webp 2x" type="image/webp">
+              <img src="/img/card-bg.jpg" srcset="/img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
+            </picture>
+            <p>Производство печатных плат</p>
+            <svg width="5" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use href="#card-arrow"></use>
+            </svg>
+          </a>
         </li>
         <li class="catalog__item">
-          <a href="#">Монтаж печатных плат</a>
+          <a href="#">
+            <picture>
+              <source srcset="/img/card-bg.webp 1x, /img/card-bg@2x.webp 2x" type="image/webp">
+              <img src="/img/card-bg.jpg" srcset="/img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
+            </picture>
+            <p>Монтаж печатных плат</p>
+            <svg width="5" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use href="#card-arrow"></use>
+            </svg>
+          </a>
         </li>
         <li class="catalog__item">
-          <a href="#">Комплектующие для светотехники</a>
+          <a href="#">
+            <picture>
+              <source srcset="/img/card-bg.webp 1x, /img/card-bg@2x.webp 2x" type="image/webp">
+              <img src="/img/card-bg.jpg" srcset="/img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
+            </picture>
+            <p>Комплектующие для светотехники</p>
+            <svg width="5" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use href="#card-arrow"></use>
+            </svg>
+          </a>
         </li>
       </ul>
     </section>
