--- a/source/index.html
+++ b/source/index.html
@@ -73,13 +73,15 @@
   <header>
     <div class="container header">
       <a class="header__logo-link">
-        <img class="header__logo" src="/img/svg/logo.svg" alt="Логотип компании Smart Device" width="215" height="55">
+        <img class="header__logo" src="../img/svg/logo.svg" alt="Логотип компании Smart Device" width="215" height="55">
       </a>
       <ul class="header__contacts-list">
         <li class="header__item">
           <address class="header__address">
             <a href="mailto:info@sd.ru">
-              <img src="/img/sprite/icon-email.svg" alt="Email" width="20" height="20">
+              <svg width="20" height="20">
+                <use xlink:href="img/sprite_auto.svg#icon-email"></use>
+              </svg>
               <span>info@sd.ru</span>
             </a>
           </address>
@@ -87,13 +89,15 @@
         <li class="header__item">
           <address class="header__address">
             <a href="tel:+74950005252">
-              <img src="/img/sprite/icon-phone.svg" alt="Телефон" width="20" height="20">
+              <svg width="20" height="20">
+                <use xlink:href="img/sprite_auto.svg#icon-phone"></use>
+              </svg>
               <span>+7 (495) 000 52 52</span>
             </a>
           </address>
         </li>
       </ul>
-      <a class="btn header__btn" href="#">Заказать звонок</a>
+      <a class="btn header__btn" data-open-modal="feedback" href="#">Заказать звонок</a>
     </div>
   </header>
 
@@ -101,8 +105,8 @@
     <h1 class="visually-hidden">Сайт компании Smart Device</h1>
     <section class="top-section container">
       <picture>
-        <source srcset="/img/title-bg.webp 1x, /img/title-bg@2x.webp 2x" type="image/webp">
-        <img class="top-section__bg" src="/img/title-bg.jpg" srcset="/img/title-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1920" height="880">
+        <source srcset="../img/title-bg.webp 1x, ../img/title-bg@2x.webp 2x" type="image/webp">
+        <img class="top-section__bg" src="../img/title-bg.jpg" srcset="../img/title-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1920" height="880">
       </picture>
       <h2 class="top-section__title">Печатные платы</h2>
       <p class="top-section__text">производство и&nbsp;монтаж, поставка комплектующих, <br>блоков и&nbsp;модулей</p>
@@ -148,8 +152,8 @@
 
     <section class="about container">
       <picture>
-        <source srcset="/img/2022.webp 1x, /img/2022@2x.webp 2x" type="image/webp">
-        <img src="/img/2022.png" srcset="/img/2022@2x.png 2x" alt="Надпись 2022" width="150" height="320">
+        <source srcset="../img/2022.webp 1x, ../img/2022@2x.webp 2x" type="image/webp">
+        <img src="../img/2022.png" srcset="../img/2022@2x.png 2x" alt="Надпись 2022" width="150" height="320">
       </picture>
       <div class="about__wrapper">
         <h2 class="about__title">О&nbsp;компании</h2>
@@ -174,8 +178,8 @@
         <li class="catalog__item">
           <a href="#">
             <picture>
-              <source srcset="/img/card-bg.webp 1x, /img/card-bg@2x.webp 2x" type="image/webp">
-              <img src="/img/card-bg.jpg" srcset="/img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
+              <source srcset="../img/card-bg.webp 1x, ../img/card-bg@2x.webp 2x" type="image/webp">
+              <img src="../img/card-bg.jpg" srcset="../img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
             </picture>
             <p>Производство печатных плат</p>
             <svg width="5" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -186,8 +190,8 @@
         <li class="catalog__item">
           <a href="#">
             <picture>
-              <source srcset="/img/card-bg.webp 1x, /img/card-bg@2x.webp 2x" type="image/webp">
-              <img src="/img/card-bg.jpg" srcset="/img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
+              <source srcset="../img/card-bg.webp 1x, ../img/card-bg@2x.webp 2x" type="image/webp">
+              <img src="../img/card-bg.jpg" srcset="../img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
             </picture>
             <p>Монтаж печатных плат</p>
             <svg width="5" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -198,8 +202,8 @@
         <li class="catalog__item">
           <a href="#">
             <picture>
-              <source srcset="/img/card-bg.webp 1x, /img/card-bg@2x.webp 2x" type="image/webp">
-              <img src="/img/card-bg.jpg" srcset="/img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
+              <source srcset="../img/card-bg.webp 1x, ../img/card-bg@2x.webp 2x" type="image/webp">
+              <img src="../img/card-bg.jpg" srcset="../img/card-bg@2x.jpg 2x" alt="Изображение материнской платы" width="1494" height="818">
             </picture>
             <p>Комплектующие для светотехники</p>
             <svg width="5" height="10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -210,28 +214,42 @@
       </ul>
     </section>
     <section class="feedback container" id="feedback">
-      <h2 class="feedback__title">Остались вопросы? Задайте их&nbsp;нам!</h2>
-      <p class="feedback__text">Мы&nbsp;проконсультируем Вас бесплатно</p>
-      <form class="feedbach__form" action="https://echo.htmlacademy.ru/" method="get">
-        <label>
-          <span class="visually-hidden">Имя</span>
-          <input class="feedback__input" name="name" type="text" placeholder="Имя" required>
-        </label>
-        <label>
-          <span class="visually-hidden">Телефон</span>
-          <input class="feedback__input" name="phone" type="number" placeholder="Телефон" required>
-        </label>
-        <label>
-          <span class="visually-hidden">Ваш вопрос</span>
-          <textarea class="feedback__input" name="question" placeholder="Ваш вопрос" required></textarea>
-        </label>
-        <button class="btn feedback__btn">Задать вопрос</button>
-        <label class="feedback__control">
-          <input class="visually-hidden" type="checkbox" name="agree" required>
-          <span class="feedback__control-mark"></span>
-          <span class="feedback__control-label">Я&nbsp;согласен на&nbsp;обработку персональных данных</span>
-        </label>
-      </form>
+      <picture>
+        <source srcset="../img/feedback-form-image-desktop.webp 1x, ../img/feedback-form-image-desktop@2x.webp 2x" type="image/webp">
+        <img class="feedback__image-desktop" src="../img/feedback-form-image-desktop.png" srcset="../img/feedback-form-image-desktop@2x.png 2x" alt="Изображение бумажного самолетика" width="510" height="285">
+      </picture>
+      <div class="feedback__wrapper">
+        <h2 class="feedback__title">Остались вопросы? Задайте их&nbsp;нам!</h2>
+        <p class="feedback__text">Мы&nbsp;проконсультируем Вас бесплатно</p>
+        <form class="feedback__form" action="https://echo.htmlacademy.ru/" method="post" autocomplete="off">
+          <div class="feedback__field feedback__element">
+            <label>
+              <span class="visually-hidden">Имя</span>
+              <input name="name" type="text" placeholder="Имя" data-pristine-required-message="*Обязательное поле" required>
+            </label>
+          </div>
+          <div class="feedback__field feedback__element">
+            <label>
+              <span class="visually-hidden">Телефон</span>
+              <input name="phone" type="tel" placeholder="Телефон" data-pristine-required-message="*Обязательное поле" data-pristine-error-message="*Номер телефона слишком короткий" required>
+            </label>
+          </div>
+          <div class="feedback__field feedback__field--textarea feedback__element">
+            <label>
+              <span class="visually-hidden">Ваш вопрос</span>
+              <textarea name="question" placeholder="Ваш вопрос"></textarea>
+            </label>
+          </div>
+          <button class="btn feedback__btn" type="submit">Задать вопрос</button>
+          <div class="feedback__control feedback__element">
+            <label>
+              <input class="visually-hidden" type="checkbox" name="agree" data-pristine-required-message="*Подтвердите свое согласие" required>
+              <span></span>
+              <span>Я&nbsp;согласен на&nbsp;обработку персональных данных</span>
+            </label>
+          </div>
+        </form>
+      </div>
     </section>
   </main>
 
@@ -239,21 +257,27 @@
     <div class="footer container">
       <div class="footer__logo-wrapper">
         <a class="footer__logo-link">
-          <img class="footer__logo" src="/img/svg/logo.svg" alt="Логотип компании Smart Device" width="215" height="55">
+          <img class="footer__logo" src="../img/svg/logo.svg" alt="Логотип компании Smart Device" width="215" height="55">
         </a>
         <div class="footer__social social">
           <h2 class="visually-hidden">Социальные сети</h2>
           <a class="social__link" href="#">
             <span class="visually-hidden">Мы в Одноклассниках</span>
-            <img src="/img/sprite/icon-ok.svg" alt="Иконка Одноклассников" width="30" height="30">
+            <svg width="30" height="30">
+              <use xlink:href="img/sprite_auto.svg#icon-ok"></use>
+            </svg>
           </a>
           <a class="social__link" href="#">
             <span class="visually-hidden">Мы во Вконтакте</span>
-            <img src="/img/sprite/icon-vk.svg" alt="Иконка Вконтакте" width="30" height="30">
+            <svg width="30" height="30">
+              <use xlink:href="img/sprite_auto.svg#icon-vk"></use>
+            </svg>
           </a>
           <a class="social__link" href="#">
             <span class="visually-hidden">Мы в Pinterest</span>
-            <img src="/img/sprite/icon-pinterest.svg" alt="Иконка Pinterest" width="30" height="30">
+            <svg width="30" height="30">
+              <use xlink:href="img/sprite_auto.svg#icon-pinterest"></use>
+            </svg>
           </a>
         </div>
       </div>
@@ -296,34 +320,49 @@
   </footer>
 </div>
 
-<!--    &lt;!&ndash; Модалки &ndash;&gt;-->
-<!--    <div class="modal modal&#45;&#45;preload" data-modal="feedback">-->
-<!--      <div class="modal__wrapper">-->
-<!--        <div class="modal__overlay" data-close-modal></div>-->
-<!--        <div class="modal__content">-->
-<!--          <p class="modal__description">Обычная модалка</p>-->
-<!--          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>-->
-<!--            <svg width="15" height="15">-->
-<!--              <use xlink:href="img/sprite_auto.svg#icon-close"></use>-->
-<!--            </svg>-->
-<!--          </button>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--    <div class="modal modal&#45;&#45;preload modal&#45;&#45;fit-content modal&#45;&#45;no-scale" data-modal="success">-->
-<!--      <div class="modal__wrapper">-->
-<!--        <div class="modal__overlay" data-close-modal></div>-->
-<!--        <div class="modal__content">-->
-<!--          <p class="modal__description">Размер этой модалки зависит от ширины контента,<br> отключена анимация-скейл</p>-->
-<!--          <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>-->
-<!--            <svg width="15" height="15">-->
-<!--              <use xlink:href="img/sprite_auto.svg#icon-close"></use>-->
-<!--            </svg>-->
-<!--          </button>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
+<!-- Модалка -->
+<div class="modal modal--preload" data-modal="feedback">
+  <div class="modal__wrapper">
+    <div class="modal__overlay" data-close-modal></div>
+    <div class="modal__content">
+      <h2 class="modal__title">Закажите звонок</h2>
+      <p class="modal__text">Оставьте контакты, мы&nbsp;проконсультируем вас бесплатно в&nbsp;удобное время</p>
+      <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post" autocomplete="off">
+        <div class="modal__field modal__element">
+          <label>
+            <span class="visually-hidden">Имя</span>
+            <input name="name" type="text" placeholder="Имя" data-pristine-required-message="*Обязательное поле" required>
+          </label>
+        </div>
+        <div class="modal__field modal__element">
+          <label>
+            <span class="visually-hidden">Телефон</span>
+            <input name="phone" type="tel" placeholder="Телефон" data-pristine-required-message="*Обязательное поле" data-pristine-error-message="*Номер телефона слишком короткий" required>
+          </label>
+        </div>
+        <div class="modal__field modal__field--textarea modal__element">
+          <label>
+            <span class="visually-hidden">Ваш вопрос</span>
+            <textarea name="question" placeholder="Ваш вопрос"></textarea>
+          </label>
+        </div>
+        <button class="btn modal__btn" type="submit">Отправить</button>
+        <div class="modal__control modal__element">
+          <label>
+            <input class="visually-hidden" type="checkbox" name="agree" data-pristine-required-message="*Подтвердите свое согласие" required>
+            <span></span>
+            <span>Я&nbsp;согласен на&nbsp;обработку персональных данных</span>
+          </label>
+        </div>
+      </form>
+      <button class="modal__close-btn btn-reset" type="button" aria-label="Закрыть попап" data-close-modal>
+        <svg width="15" height="15">
+          <use xlink:href="img/sprite_auto.svg#icon-close"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
+</div>
 
 <script src="js/vendor.min.js"></script>
 <script src="js/main.min.js"></script>
